--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Yash Malav </title>
-    <meta property="og:image" content="https://bolt.new/static/og_default.png">
+    <meta property="og:image" content="https://pub-716f19976bdb47199c4f009f252c1d36.r2.dev/gdesings/banner.png">
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:image" content="https://bolt.new/static/og_default.png">
+    <meta name="twitter:image" content="https://pub-716f19976bdb47199c4f009f252c1d36.r2.dev/gdesings/banner.png">
 </head>
   <body>
     <div id="root"></div>
